# orb-models

./: .flake8  .gitignore  .python-version  CONTRIBUTING.md  Dockerfile  FINETUNING_GUIDE.md  LICENSE  MODELS.md  README.md  example_reference_energies.json  finetune.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml  test.yml
aws/: Orb-Model.ipynb
aws/examples/: output.json
azure/: Orb-Model.ipynb
azure/examples/: 4A.cif
examples/: .gitignore  HClWater.xyz  HClWaterMD-reactioncapture.py  NaClWater.xyz  NaClWaterMD.py  OrbMDTut.ipynb  SN2-noH.xyz  SN2MD-reactioncapture.py
examples/example_output/: NaClWaterMD.xyz
examples/output/: HClWater_md.xyz
examples/output/old/: HClWater_md.xyz
internal/: check.py  speed.py
orb_models/: __init__.py  utils.py
orb_models/common/: __init__.py  torch_utils.py  utils.py
orb_models/common/atoms/: abstract_atoms_adapter.py  featurization.py  graph_featurization.py
orb_models/common/atoms/batch/: abstract_batch.py  graph_batch.py
orb_models/common/dataset/: abstract_dataset.py  ase_sqlite_dataset.py  augmentations.py  loaders.py  property_definitions.py
orb_models/common/dataset/augmentations/: __init__.py  geometric_augmentations.py
orb_models/common/models/: angular.py  base.py  embedding.py  gns.py  graph_regressor.py  load.py  nn_util.py  rbf.py  segment_ops.py
orb_models/common/training/: metrics.py  util.py
orb_models/dataset/: ase_dataset.py  ase_sqlite_dataset.py  augmentations.py  base_datasets.py  data_loaders.py
orb_models/finetune_utilities/: checkpointer.py  ema.py  experiment.py  optim.py  steps.py
orb_models/forcefield/: angular.py  atomic_system.py  base.py  calculator.py  conservative_regressor.py  direct_regressor.py  embedding.py  featurization_utilities.py  forcefield_adapter.py  forcefield_heads.py  forcefield_utils.py  gns.py  graph_regressor.py  load.py  loss.py  nn_util.py  pair_repulsion.py  pretrained.py  property_definitions.py  rbf.py  reference_energies.py  segment_ops.py
orb_models/forcefield/inference/: calculator.py  d3_model.py  dftd3_parameters.pt  orb_torchsim.py
orb_models/forcefield/models/: conservative_regressor.py  coulomb_module.py  direct_regressor.py  forcefield_heads.py  forcefield_utils.py  loss.py  pair_repulsion.py  reference_energies.py
orbbench_mini/: diatomics.py  isolated_molecules.py  mini_adsorption.py  orbbench_mini.py  simple_md.py  step1.db  vibration.py
scripts/: convert_orbmol_v2_ckpt.py  speed.py
tests/: conftest.py  model_test.py  test_atomic_system.py  test_base.py  test_calculator.py  test_featurization_utilities.py  test_model_backward_compatibility.py  test_segment_ops.py  test_torque_removal.py
tests/atomgraphs/: conftest.py  test_atomic_system.py  test_base.py  test_graph_construction_invariances.py  test_pbc_radius_graph.py  test_periodic_utils.py  test_segment_ops.py
tests/atomgraphs/fixtures/: 10_thin_mp_traj_systems.db  zeo_test.pkl
tests/common/: conftest.py  test_inference.py  test_utils.py
tests/common/atoms/: common_adapter_tests.py  conftest.py  test_graph_batch.py  test_graph_construction_invariances.py  test_pbc_radius_graph.py  test_periodic_utils.py  utils.py
tests/common/dataset/: __init__.py  test_ase_sqlite_dataset.py
tests/common/dataset/augmentations/: test_geometric_augmentations.py
tests/common/dataset/fixtures/: test_with_target.db
tests/common/fixtures/: 0000[Cd][nan]3[FSR]1.cif  ENIXEH_FSR_pacman.cif  malformed.cif  minimal_valid.cif  pymatgen_fails_ase_succeeds.cif  symmetry_disorder.cif
tests/common/fixtures/databases/: test_dataset.db
tests/common/fixtures/structures/: atom_ocp22.json
tests/common/model/: conftest.py  test_charge_spin_conditioning.py  test_differentiability.py  test_gns.py  test_segment_ops.py  test_transforms.py
tests/expensive_tests/: conftest.py  test_backwards_compatibility.py
tests/fixtures/: 10_mptraj_systems.db  AFI.cif
tests/forcefield/: conftest.py  test_calculator.py  test_conservative.py  test_d3.py  test_forcefield_adapter.py  test_forcefield_heads.py  test_metrics.py  test_optimise.py  test_orb_torchsim.py  test_orbmol_v2_smoke.py  test_pair_repulsion.py  test_tojax_compatibility.py  test_torque_removal.py  test_utils.py
tests/forcefield/fixtures/: phononDB_test.db
tests/model/: conftest.py  test_gns.py  test_graph_regressor.py  test_utils.py
