[project]
name = "orb-models"
dynamic = ["version"]
description = "Foundation models for computational chemistry."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Orbital Materials"}]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "cached-path>=1.7.1",
    "ase>=3.25.0,<4",
    "scipy>=1.15.1",
    "torch>=2.8.0, <3.0.0",
    "dm-tree==0.1.8", # Pinned because of https://github.com/google-deepmind/tree/issues/128
    "tqdm>=4.67.1",
    "nvalchemi-toolkit-ops>=0.2.0",
    "torch-sim-atomistic>=0.5.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orb_models*"]

[project.urls]
Homepage = "https://github.com/orbital-materials/orb-models"
Changelog = "https://github.com/orbital-materials/orb-models/releases"
Issues = "https://github.com/orbital-materials/orb-models/issues"
CI = "https://github.com/orbital-materials/orb-models/actions"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "ruff>=0.10.0",
    "mypy>=1.13",
    "torch_dftd",
]

[tool.setuptools.dynamic]
version = {attr = "orb_models.__version__"}

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch_sim.*"
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # Ignore: Line too long. `ruff format` already takes care of this. The formatter however does not wrap long strings, so we ignore those.
    "E731",    # Ignore: Do not assign lambdas
    "B006",    # Ignore: Mutable default argument
    "B008",    # Ignore: Function call in default argument
    "B007",    # Ignore: Loop control variable not used within loop body
    "B028",    # Ignore: No explicit `stacklevel` keyword argument found
    "B904",    # Ignore: Raise without "from" inside exception
    "SIM108",  # Ignore: Use ternary operator
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
